welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not enough arguments for method growFlowers: (k: java.awt.Color)Unit.
Unspecified value parameter k.
	    growFlowers();
                       ^