welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(k:Color) {
marquage(k); droite(); avance(); gauche();avance(); marquage(k); avance()
gauche();avance(); marquage(k); avance(); gauche();avance();marquage(k);
gauche();avance();marquage(Color.yellow);gauche();recule();	
	
}

def marquage(c:Color)
{setCouleurBrosse(c);baisseBrosse();leveBrosse()	
}
growFlowers(Color.red)